[package]
name = "heartbeat_api"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ahash = "0.8"
chrono = "0.4"
tracing = "0.1"
thiserror = "1"
once_cell = "1"
futures = "0.3"
dotenvy = "0.15"
mimalloc = "0.1"
urlencoding = "2"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "chrono"] }
tower = { version = "0.4", features = [
    "tokio",
    "buffer",
    "timeout",
    "load-shed",
] }

[profile.release]
debug = 0
lto = "fat"
opt-level = 3
codegen-units = 1
split-debuginfo = "off"
