[package]
name = "heartbeat_api"
version = "1.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ahash = "0.8"
chrono = "0.4"
tracing = "0.1"
thiserror = "1"
futures = "0.3"
dotenvy = "0.15"
mimalloc = "0.1"
serde_json = "1"
urlencoding = "2"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
compact_str = { version = "0.7.1", features = ["serde"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["tokio", "timeout", "load-shed"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "chrono"] }
parking_lot = { version = "0.12.1", features = [
    "arc_lock",
    "hardware-lock-elision",
    "send_guard",
] }

[profile.release]
debug = 0
lto = "fat"
opt-level = 3
codegen-units = 1
split-debuginfo = "off"
panic = "abort"
