[package]
name = "heartbeat_api"
version = "1.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.7"
ahash = "0.8"
chrono = "0.4"
tracing = "0.1"
thiserror = "1"
futures = "0.3"
dotenvy = "0.15"
serde_json = "1"
mimalloc = "0.1"
urlencoding = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
compact_str = { version = "0.7", features = ["serde"] }
once_cell = { version = "1.19", features = ["parking_lot"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["tokio", "timeout", "load-shed"] }
parking_lot = { version = "0.12", features = ["arc_lock", "send_guard"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "chrono"] }

[profile.release]
debug = 0
lto = "fat"
opt-level = 3
codegen-units = 1
split-debuginfo = "off"
panic = "abort"
